update management job page

--- a/techmaster-project/jobs-module/company-profile.html
+++ b/techmaster-project/jobs-module/company-profile.html
@@ -316,7 +316,7 @@
             </a>
 
 
-            <a href="./management-job.html" class="sidebar-menu-item management-job">
+            <a href="./management-jobs.html" class="sidebar-menu-item management-job">
               <i class="fas fa-briefcase sidebar-menu-icon fa-fw"></i> <span class="sidebar-menu-name">Quản lý việc
                 làm</span>
             </a>
@@ -411,7 +411,7 @@
 
             <div class="tab-pane fade" id="companyDetails" role="tabpanel" aria-labelledby="companyDetails-tab">
               <div class="row">
-                <div class="col-md-10 col-12 mx-auto input-wrapper">
+                <div class="col-10 mx-auto input-wrapper">
                   <form action="">
                     <div class="company-description input-field">
                       <div class="form-group">
@@ -450,7 +450,7 @@
             </div>
             <div class="tab-pane fade" id="welfare" role="tabpanel" aria-labelledby="welfare-tab">
               <div class="row">
-                <div class="col-md-10 col-12 mx-auto welfare-wrapper">
+                <div class="col-10 mx-auto welfare-wrapper">
                   <form action="" class="welfare-item-wrapper">
                     <div class="welfare-item">
                       <div class="header" onclick="collapseWelfare(this)">
