--- a/techmaster-project/jobs-module/employer-dashboard.html
+++ b/techmaster-project/jobs-module/employer-dashboard.html
@@ -210,7 +210,7 @@
             </a>
 
 
-            <a href="./management-job.html" class="sidebar-menu-item management-job">
+            <a href="./management-jobs.html" class="sidebar-menu-item management-job">
               <i class="fas fa-briefcase sidebar-menu-icon fa-fw"></i> <span class="sidebar-menu-name">Quản lý việc
                 làm</span>
             </a>
@@ -275,17 +275,17 @@
                   <td>20</td>
                 </tr>
                 <tr>
-                  <td class="job-link-wrapper"><a href="#" class="job-link">UI-UX Designer (HTML5/JavaScript)</a></td>
+                  <td class="job-link-wrapper"><a href="job-management.html" class="job-link">UI-UX Designer (HTML5/JavaScript)</a></td>
                   <td>14/09/2019</td>
                   <td>20</td>
                 </tr>
                 <tr>
-                  <td class="job-link-wrapper"><a href="#" class="job-link">UI-UX Designer (HTML5/JavaScript)</a></td>
+                  <td class="job-link-wrapper"><a href="job-management.html" class="job-link">UI-UX Designer (HTML5/JavaScript)</a></td>
                   <td>14/09/2019</td>
                   <td>20</td>
                 </tr>
                 <tr>
-                  <td class="job-link-wrapper"><a href="#" class="job-link">UI-UX Designer (HTML5/JavaScript)</a></td>
+                  <td class="job-link-wrapper"><a href="job-management.html" class="job-link">UI-UX Designer (HTML5/JavaScript)</a></td>
                   <td>14/09/2019</td>
                   <td>20</td>
                 </tr>
