remove filter and update money format filter

--- a/obo-stadium/shop.html
+++ b/obo-stadium/shop.html
@@ -705,6 +705,8 @@
     <script src="./data.json"></script>
     <!-- Pagination Js-->
     <script type="text/javascript" src="./vendor/pagination/jquery.paginate.js"></script>
+    <!-- Money Format Js-->
+    <script type="text/javascript" src="./vendor/money-format/simple.money.format.js"></script>    
     <!-- Currency-->
     <script type="text/javascript" src="./vendor/currency/currency.min.js"></script>
     <script src="./script/except-home-page.js"></script>
