update placeholder breadcrumb, clear filter to close modal

--- a/obo-stadium/shop.html
+++ b/obo-stadium/shop.html
@@ -638,7 +638,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button class="clear-filter btn btn-primary" disabled="disabled">Bỏ lọc</button>
+              <button class="clear-filter btn btn-primary" data-dismiss="modal" aria-label="Close" style="line-height: 24px; padding: .375rem .75rem;">Bỏ lọc</button>
               <button class="btn btn-primary apply-price small red-btn">Áp dụng</button>
             </div>
           </div>
