--- a/obo-stadium/product-details.html
+++ b/obo-stadium/product-details.html
@@ -56,7 +56,7 @@
     </header>
     <main>
       <!-- Breadcrum Section-->
-      <div class="breadcrumb container"><a class="previous-page" href="./index.html">Trang ch&#x1EE7;</a><i class="fas fa-chevron-right arrow"></i><a class="previous-page" href="./shop.html">S&#x1EA3;n ph&#x1EA9;m</a><i class="fas fa-chevron-right arrow"></i><span class="current-page">T&ecirc;n s&#x1EA3;n ph&#x1EA9;m</span></div>
+      <div class="breadcrumb container"><a class="previous-page" href="./index.html">Trang ch&#x1EE7;</a><i class="fas fa-chevron-right arrow"></i><a class="previous-page" href="./shop.html">S&#x1EA3;n ph&#x1EA9;m</a><i class="fas fa-chevron-right arrow"></i><span class="current-page">Adidas Yeezy Boost 700 Wave Runner Solid Grey</span></div>
       <!-- Products Content Section-->
       <section class="product-content-wrapper container">
         <div class="common-info">
@@ -275,8 +275,8 @@
     <script src="./data.json"></script>
     <!-- Image Zoom Js-->
     <script src="./vendor/zoom-master/jquery.zoom.min.js" type="text/javascript">
-      <!-- Currency-->
     </script>
+    <!-- Currency-->
     <script type="text/javascript" src="./vendor/currency/currency.min.js"></script>
     <!-- Slick Js-->
     <script type="text/javascript" src="./vendor/slick/slick.min.js"></script>
