update plus symbol position

--- a/rest-api-table/index.html
+++ b/rest-api-table/index.html
@@ -27,7 +27,7 @@
 <body>
     <div class="container">
         <div class="header d-flex align-items-center">
-            <button class="btn btn-primary" data-toggle="modal" data-target="#addNewStudent">Thêm học viên +</button>
+            <button class="btn btn-primary" data-toggle="modal" data-target="#addNewStudent">+ Thêm học viên</button>
             <h1 class="text-center m-4" style="width: 70%">Danh sách học viên</h1>
         </div>
         <div class="table-responsive">
